update method in mystery service to match the language version in docker environment